Tag all PCC failing tests with issue #2150 for debug

--- a/tests/runner/test_config/torch_llm/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/torch_llm/test_config_inference_single_device.yaml
@@ -12,6 +12,7 @@ test_config:
     status: EXPECTED_PASSING
 
   falcon/pytorch-tiiuae/Falcon3-3B-Base-llm_decode-single_device-inference:
+    required_pcc: 0.985 # Is 0.990 (p150)or 0.989 (n150)
     status: EXPECTED_PASSING
 
   falcon/pytorch-tiiuae/Falcon3-7B-Base-llm_decode-single_device-inference:
@@ -24,12 +25,15 @@ test_config:
 
   qwen_2_5/causal_lm/pytorch-0_5b_instruct-llm_decode-single_device-inference:
     status: EXPECTED_PASSING
+    assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2845
 
   qwen_2_5/causal_lm/pytorch-1_5b_instruct-llm_decode-single_device-inference:
     status: EXPECTED_PASSING
+    assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2845
 
   qwen_2_5/causal_lm/pytorch-3b_instruct-llm_decode-single_device-inference:
     status: EXPECTED_PASSING
+    assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2845 - original test also has low pcc
 
   qwen_2_5/causal_lm/pytorch-7b_instruct-llm_decode-single_device-inference:
     supported_archs: ["p150"] # Runs as tensor_parallel for wormhole.
@@ -38,6 +42,7 @@ test_config:
   qwen_2_5/causal_lm/pytorch-14b_instruct-llm_decode-single_device-inference:
     supported_archs: ["p150"] # Runs as tensor_parallel for wormhole.
     status: EXPECTED_PASSING
+    assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2845
 
   qwen_2_5/causal_lm/pytorch-32b_instruct-llm_decode-single_device-inference:
     status: EXCLUDE_MODEL # Too large for single chip, run as tensor_parallel instead.
@@ -51,13 +56,16 @@ test_config:
   gemma/pytorch-google/gemma-1.1-7b-it-llm_decode-single_device-inference:
     supported_archs: ["p150"] # Runs as tensor_parallel for wormhole.
     status: EXPECTED_PASSING
+    assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2845
 
   gemma/pytorch-google/gemma-2-2b-it-llm_decode-single_device-inference:
     status: EXPECTED_PASSING
+    assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2845
 
   gemma/pytorch-google/gemma-2-9b-it-llm_decode-single_device-inference:
     supported_archs: ["p150"] # Runs as tensor_parallel for wormhole.
     status: EXPECTED_PASSING
+    assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2845
 
   gemma/pytorch-google/gemma-2-27b-it-llm_decode-single_device-inference:
     status: EXCLUDE_MODEL # Too large for single chip, run as tensor_parallel instead.
@@ -77,6 +85,7 @@ test_config:
 
   llama/causal_lm/pytorch-llama_3_2_1b_instruct-llm_decode-single_device-inference:
     status: EXPECTED_PASSING
+    assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2845
 
   llama/causal_lm/pytorch-llama_3_2_3b_instruct-llm_decode-single_device-inference:
     status: EXPECTED_PASSING
@@ -96,6 +105,7 @@ test_config:
   qwen_3/causal_lm/pytorch-8b-llm_decode-single_device-inference:
     supported_archs: ["p150"] # Runs as tensor_parallel for wormhole.
     status: EXPECTED_PASSING
+    assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2845
 
   qwen_3/causal_lm/pytorch-14b-llm_decode-single_device-inference:
     supported_archs: ["p150"] # Runs as tensor_parallel for wormhole.
