--- a/tests/runner/test_config/torch_llm/test_config_inference_tensor_parallel.yaml
+++ b/tests/runner/test_config/torch_llm/test_config_inference_tensor_parallel.yaml
@@ -14,7 +14,9 @@ test_config:
 
   qwen_2_5/causal_lm/pytorch-7b_instruct-llm_decode-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
+    status: NOT_SUPPORTED_SKIP
+    bringup_status: FAILED_RUNTIME
+    reason: "DRAM OOM - shard spec issues - https://github.com/tenstorrent/tt-xla/issues/2150"
 
   qwen_2_5/causal_lm/pytorch-14b_instruct-llm_decode-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
@@ -23,6 +25,7 @@ test_config:
   qwen_2_5/causal_lm/pytorch-32b_instruct-llm_decode-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
     status: EXPECTED_PASSING
+    assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2845
 
   qwen_2_5/causal_lm/pytorch-72b_instruct-llm_decode-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
@@ -37,6 +40,7 @@ test_config:
   gemma/pytorch-google/gemma-2-9b-it-llm_decode-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
     status: EXPECTED_PASSING
+    assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2845
 
   gemma/pytorch-google/gemma-2-27b-it-llm_decode-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
@@ -45,6 +49,7 @@ test_config:
   llama/causal_lm/pytorch-llama_3_1_8b_instruct-llm_decode-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
     status: EXPECTED_PASSING
+    assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2845
 
   llama/causal_lm/pytorch-llama_3_1_70b-llm_decode-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
