--- a/tests/runner/test_config/torch_llm/test_config_inference_tensor_parallel.yaml
+++ b/tests/runner/test_config/torch_llm/test_config_inference_tensor_parallel.yaml
@@ -20,12 +20,14 @@ test_config:
 
   qwen_2_5/causal_lm/pytorch-14b_instruct-llm_decode-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
+    status: KNOWN_FAILURE_XFAIL # Jan 15 2026
+    reason: "Statically allocated circular buffers on core range ... grow to 1511680 B which is beyond max L1 - https://github.com/tenstorrent/tt-xla/issues/2846"
 
   qwen_2_5/causal_lm/pytorch-32b_instruct-llm_decode-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
     assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2845
+    status: KNOWN_FAILURE_XFAIL # Jan 15 2026
+    reason: "Statically allocated circular buffers on core range ... grow to 1511680 B which is beyond max L1 - https://github.com/tenstorrent/tt-xla/issues/2846"
 
   qwen_2_5/causal_lm/pytorch-72b_instruct-llm_decode-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
@@ -78,14 +80,17 @@ test_config:
   qwen_3/causal_lm/pytorch-8b-llm_decode-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
     status: EXPECTED_PASSING
+    required_pcc: 0.98 # Is 0.986
 
   qwen_3/causal_lm/pytorch-14b-llm_decode-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
+    status: KNOWN_FAILURE_XFAIL # Jan 15 2026
+    reason: "Statically allocated circular buffers on core range ... grow to 1511680 B which is beyond max L1 - https://github.com/tenstorrent/tt-xla/issues/2846"
 
   qwen_3/causal_lm/pytorch-32b-llm_decode-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
+    status: KNOWN_FAILURE_XFAIL # Jan 15 2026
+    reason: "Statically allocated circular buffers on core range ... grow to 1511680 B which is beyond max L1 - https://github.com/tenstorrent/tt-xla/issues/2846"
 
   qwen_3/causal_lm/pytorch-30b_a3b-llm_decode-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
