--- a/.github/Dockerfile.release
+++ b/.github/Dockerfile.release
@@ -20,15 +20,15 @@ RUN apt-get update && \
     ca-certificates \
     sudo \
     ssh \
-    python3-pip \
     unzip
 
 # Install python 3.11 and set is as the default
 RUN add-apt-repository ppa:deadsnakes/ppa && \
     apt-get update && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends python3.11 python3.11-dev python3.11-venv python3.11-distutils && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends python3.11 python3.11-dev python3.11-venv python3.11-distutils python3-pip && \
     update-alternatives --install /usr/bin/python python /usr/bin/python3.11 1 && \
-    update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.11 1
+    update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.11 1 && \
+    python -m pip install --no-cache-dir --upgrade pip
 
 # Install system dependencies
 RUN apt-get update && \
