--- a/.github/workflows/manual-test-single.yml
+++ b/.github/workflows/manual-test-single.yml
@@ -108,11 +108,11 @@ jobs:
       project-filter: tt-xla
       ref: vvukoman/extract-mlir-version-differently
 
-  # publish-release:
-  #   uses: ./.github/workflows/call-publish-release.yml
-  #   secrets: inherit
-  #   needs: [ build-release-docker, demo-test ]
-  #   with:
-  #     release_tag: ${{ inputs.release_tag }}
-  #     docker_image_base: ${{ needs.build-release-docker.outputs.docker_image_base }}
-  #     is_nightly_release: true
+  publish-release:
+    uses: ./.github/workflows/call-publish-release.yml
+    secrets: inherit
+    needs: [ build-release-docker ]
+    with:
+      release_tag: ${{ inputs.release_tag }}
+      docker_image_base: ${{ needs.build-release-docker.outputs.docker_image_base }}
+      is_nightly_release: true
