--- a/tests/runner/test_config/torch/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/torch/test_config_inference_single_device.yaml
@@ -96,14 +96,10 @@ test_config:
     status: EXPECTED_PASSING
 
   albert/masked_lm/pytorch-xxlarge_v2-single_device-inference:
-    required_pcc: 0.98
     status: EXPECTED_PASSING
 
   albert/masked_lm/pytorch-large_v2-single_device-inference:
     status: EXPECTED_PASSING
-    arch_overrides:
-      n150:
-        required_pcc: 0.98
 
   yolov3/pytorch-base-single_device-inference:
     required_pcc: 0.97  # AssertionError: PCC comparison failed. Calculated: pcc=0.9725883603096008. Required: pcc=0.98. Exposed by removal of consteval on host: https://github.com/tenstorrent/tt-xla/issues/1242
@@ -153,7 +149,7 @@ test_config:
 #    reason: "TypeError: AutoShape.forward() takes from 2 to 5 positional arguments but 7 were given - https://github.com/tenstorrent/tt-forge-models/issues/136"
 
   albert/masked_lm/pytorch-base_v2-single_device-inference:
-    required_pcc: 0.97 # https://github.com/tenstorrent/tt-mlir/issues/6461
+    required_pcc: 0.98 # https://github.com/tenstorrent/tt-mlir/issues/6461
     status: EXPECTED_PASSING
 
   albert/masked_lm/pytorch-xlarge_v2-single_device-inference:
@@ -218,14 +214,11 @@ test_config:
 
   densenet/pytorch-densenet161-single_device-inference:
     status: EXPECTED_PASSING
-    required_pcc: 0.985  # 0.990 for BH, 0.989 for WH
 
   densenet/pytorch-densenet169-single_device-inference:
-    required_pcc: 0.98  # AssertionError: PCC comparison failed. Calculated: pcc=0.9880856871604919. Required: pcc=0.99. Exposed by removal of consteval on host: https://github.com/tenstorrent/tt-xla/issues/1242
     status: EXPECTED_PASSING
 
   densenet/pytorch-densenet201-single_device-inference:
-    required_pcc: 0.98  # AssertionError: PCC comparison failed. Calculated: pcc=0.9871042966842651. Required: pcc=0.99. Exposed by removal of consteval on host: https://github.com/tenstorrent/tt-xla/issues/1242
     status: EXPECTED_PASSING
 
   densenet/pytorch-densenet121_xray-single_device-inference:
@@ -375,11 +368,9 @@ test_config:
     status: EXPECTED_PASSING
 
   mamba/pytorch-mamba-1.4b-hf-single_device-inference:
-    assert_pcc: false # -0.0130 WH / -0.0888 BH as of Nov 5 2025 right after an uplift which contained newer LLVM https://github.com/tenstorrent/tt-xla/issues/2000
     status: EXPECTED_PASSING
 
   mamba/pytorch-mamba-370m-hf-single_device-inference:
-    assert_pcc: false # -0.0327 WH / 0.3821 BH as of Nov 5 2025 right after an uplift which contained newer LLVM https://github.com/tenstorrent/tt-xla/issues/2000
     status: EXPECTED_PASSING
 
   mgp_str_base/pytorch-single_device-inference:
@@ -549,7 +540,6 @@ test_config:
 
   mamba/pytorch-mamba-2.8b-hf-single_device-inference:
     status: EXPECTED_PASSING
-    assert_pcc: false # issue - https://github.com/tenstorrent/tt-xla/issues/2607
 
   deit/pytorch-base-single_device-inference:
     status: EXPECTED_PASSING
@@ -665,9 +655,6 @@ test_config:
 
   opt/qa/pytorch-facebook/opt-125m-single_device-inference:
     status: EXPECTED_PASSING
-    arch_overrides:
-      p150:
-        required_pcc: 0.98 # https://github.com/tenstorrent/tt-xla/issues/2433
 
   opt/qa/pytorch-facebook/opt-350m-single_device-inference:
     status: EXPECTED_PASSING
@@ -712,11 +699,6 @@ test_config:
 
   albert/token_classification/pytorch-xxlarge_v1-single_device-inference:
     status: EXPECTED_PASSING
-    arch_overrides:
-      n150:
-        required_pcc: 0.98 # tt-torch has this at 0.99
-      p150:
-        required_pcc: 0.97 # tt-torch has this at 0.99
 
   albert/masked_lm/pytorch-base_v1-single_device-inference:
     status: EXPECTED_PASSING
@@ -770,7 +752,6 @@ test_config:
 
   albert/token_classification/pytorch-xlarge_v1-single_device-inference:
     status: EXPECTED_PASSING
-    required_pcc: 0.98
 
   perceiverio_vision/pytorch-deepmind/vision-perceiver-fourier-single_device-inference:
     required_pcc: 0.98
@@ -791,9 +772,7 @@ test_config:
     reason: "AssertionError: PCC comparison failed. Calculated: pcc=0.958276593048647. Required: pcc=0.99"
 
   opt/causal_lm/pytorch-facebook/opt-1.3b-single_device-inference:
-    assert_pcc: false
     status: EXPECTED_PASSING
-    reason: "AssertionError: PCC comparison failed. Calculated: pcc=0.9574284831613491. Required: pcc=0.99"
 
   perceiverio_vision/pytorch-deepmind/vision-perceiver-learned-single_device-inference:
     assert_pcc: false  # PCC observed: 0.9516052236372167 (below 0.99 threshold)
@@ -1487,7 +1466,6 @@ test_config:
   #   status: EXPECTED_PASSING
 
   gemma/pytorch-google/gemma-2b-single_device-inference:
-    assert_pcc: false
     status: EXPECTED_PASSING
 
   autoencoder/pytorch-conv-single_device-inference:
@@ -1600,8 +1578,7 @@ test_config:
         status: EXPECTED_PASSING
 
       n150:
-        status: KNOWN_FAILURE_XFAIL
-        reason: "RuntimeError: Out of Memory: Not enough space to allocate 49971200 B L1 buffer across 64 banks"
+        status: EXPECTED_PASSING
 
   stable_diffusion_1_4/pytorch-base-single_device-inference:
     status: NOT_SUPPORTED_SKIP
@@ -2153,28 +2130,24 @@ test_config:
     bringup_status: FAILED_RUNTIME
 
   openvla/pytorch-openvla_7b-single_device-inference:
-    status: KNOWN_FAILURE_XFAIL
-    reason: "Out of Memory: Not enough space to allocate 90177536 B DRAM buffer across 12 banks, where each bank needs to store 7516160 B, but bank size is only 1073741792 B"
+    status: EXPECTED_PASSING
 
   openvla/pytorch-openvla_v01_7b-single_device-inference:
     status: KNOWN_FAILURE_XFAIL
     reason: "Out of Memory: Not enough space to allocate 90177536 B DRAM buffer across 12 banks, where each bank needs to store 7516160 B, but bank size is only 1073741792 B"
 
   openvla/pytorch-openvla_7b_finetuned_libero_10-single_device-inference:
-    status: KNOWN_FAILURE_XFAIL
-    reason: "Out of Memory: Not enough space to allocate 90177536 B DRAM buffer across 12 banks, where each bank needs to store 7516160 B, but bank size is only 1073741792 B"
+    status: EXPECTED_PASSING
 
   openvla/pytorch-openvla_7b_finetuned_libero_goal-single_device-inference:
-    status: KNOWN_FAILURE_XFAIL
-    reason: "Out of Memory: Not enough space to allocate 90177536 B DRAM buffer across 12 banks, where each bank needs to store 7516160 B, but bank size is only 1073741792 B"
+    status: EXPECTED_PASSING
 
   openvla/pytorch-openvla_7b_finetuned_libero_object-single_device-inference:
     status: KNOWN_FAILURE_XFAIL
     reason: "Out of Memory: Not enough space to allocate 90177536 B DRAM buffer across 12 banks, where each bank needs to store 7516160 B, but bank size is only 1073741792 B"
 
   openvla/pytorch-openvla_7b_finetuned_libero_spatial-single_device-inference:
-    status: KNOWN_FAILURE_XFAIL
-    reason: "Out of Memory: Not enough space to allocate 90177536 B DRAM buffer across 12 banks, where each bank needs to store 7516160 B, but bank size is only 1073741792 B"
+    status: EXPECTED_PASSING
 
   transfuser/pytorch-single_device-inference:
     assert_pcc: false # PCC is -0.715
@@ -2323,7 +2296,6 @@ test_config:
 
   maskformer_swin_b/pytorch-swin_base_ade-single_device-inference:
     status: EXPECTED_PASSING
-    assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2237
 
   yolos_small/pytorch-small-single_device-inference:
     required_pcc: 0.98
