--- a/.github/workflows/schedule-nightly.yml
+++ b/.github/workflows/schedule-nightly.yml
@@ -46,18 +46,18 @@ jobs:
   #     artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
   #     wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
 
-  # # This is a single test job that runs all passing tt-forge-models tests.
-  # test_forge_models_passing:
-  #   uses: ./.github/workflows/call-test.yml
-  #   secrets: inherit
-  #   needs: [ build-image, build-ttxla ]
-  #   # This ensures the job runs regardless of success or failure of `nightly_tests`:
-  #   if: success() || failure()
-  #   with:
-  #     test_suite: model-test-passing.json
-  #     docker_image: ${{ needs.build-image.outputs.docker-image }}
-  #     artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
-  #     wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
+  # This is a single test job that runs all passing tt-forge-models tests.
+  test_forge_models_passing:
+    uses: ./.github/workflows/call-test.yml
+    secrets: inherit
+    needs: [ build-image, build-ttxla ]
+    # This ensures the job runs regardless of success or failure of `nightly_tests`:
+    if: success() || failure()
+    with:
+      test_suite: model-test-passing.json
+      docker_image: ${{ needs.build-image.outputs.docker-image }}
+      artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
+      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
 
   # # This is a single test job that runs all xfailing, skipped or placeholder tt-forge-models tests.
   # test_forge_models_xfail:
@@ -72,20 +72,21 @@ jobs:
   #     artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
   #     wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
 
-  test_single_model_with_ir_dump:
-    uses: ./.github/workflows/call-test.yml
-    secrets: inherit
-    needs: [ build-image, build-ttxla ]
-    if: success() || failure()
-    with:
-      test_suite: model-test-ir-dump-single.json
-      docker_image: ${{ needs.build-image.outputs.docker-image }}
-      artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
-      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
+  # Commented out - replaced by test_forge_models_passing with --dump-irs
+  # test_single_model_with_ir_dump:
+  #   uses: ./.github/workflows/call-test.yml
+  #   secrets: inherit
+  #   needs: [ build-image, build-ttxla ]
+  #   if: success() || failure()
+  #   with:
+  #     test_suite: model-test-ir-dump-single.json
+  #     docker_image: ${{ needs.build-image.outputs.docker-image }}
+  #     artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
+  #     wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
 
   process_dumped_irs:
     runs-on: tt-ubuntu-2204-n150-stable
-    needs: [ build-image, build-ttxla, test_single_model_with_ir_dump ]
+    needs: [ build-image, build-ttxla, test_forge_models_passing ]
     if: success() || failure()
     container:
       image: ${{ needs.build-image.outputs.docker-image }}
@@ -190,6 +191,9 @@ jobs:
 
           # Set PYTHONPATH to include op_by_op_infra
           export PYTHONPATH="${{ steps.strings.outputs.work-dir }}/third_party/tt-mlir/build/python_packages:${PYTHONPATH}"
+
+          # Suppress unnecessary runtime logs
+          export TTRT_LOGGER_LEVEL=ERROR
 
           echo "=== Verifying op_by_op_infra is importable ==="
           python3 -c "import op_by_op_infra; print(f'op_by_op_infra found at: {op_by_op_infra.__file__}')"
