--- a/tests/runner/test_config/torch_llm/test_config_inference_tensor_parallel.yaml
+++ b/tests/runner/test_config/torch_llm/test_config_inference_tensor_parallel.yaml
@@ -20,13 +20,15 @@ test_config:
 
   qwen_2_5/causal_lm/pytorch-14b_instruct-llm_decode-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: KNOWN_FAILURE_XFAIL # Jan 15 2026
+    status: NOT_SUPPORTED_SKIP # Jan 15 2026
+    bringup_status: FAILED_RUNTIME
     reason: "Statically allocated circular buffers on core range ... grow to 1511680 B which is beyond max L1 - https://github.com/tenstorrent/tt-xla/issues/2846"
 
   qwen_2_5/causal_lm/pytorch-32b_instruct-llm_decode-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
     assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2845
-    status: KNOWN_FAILURE_XFAIL # Jan 15 2026
+    status: NOT_SUPPORTED_SKIP # Jan 15 2026
+    bringup_status: FAILED_RUNTIME
     reason: "Statically allocated circular buffers on core range ... grow to 1511680 B which is beyond max L1 - https://github.com/tenstorrent/tt-xla/issues/2846"
 
   qwen_2_5/causal_lm/pytorch-72b_instruct-llm_decode-tensor_parallel-inference:
@@ -84,12 +86,14 @@ test_config:
 
   qwen_3/causal_lm/pytorch-14b-llm_decode-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: KNOWN_FAILURE_XFAIL # Jan 15 2026
+    status: NOT_SUPPORTED_SKIP # Jan 15 2026
+    bringup_status: FAILED_RUNTIME
     reason: "Statically allocated circular buffers on core range ... grow to 1511680 B which is beyond max L1 - https://github.com/tenstorrent/tt-xla/issues/2846"
 
   qwen_3/causal_lm/pytorch-32b-llm_decode-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: KNOWN_FAILURE_XFAIL # Jan 15 2026
+    status: NOT_SUPPORTED_SKIP # Jan 15 2026
+    bringup_status: FAILED_RUNTIME
     reason: "Statically allocated circular buffers on core range ... grow to 1511680 B which is beyond max L1 - https://github.com/tenstorrent/tt-xla/issues/2846"
 
   qwen_3/causal_lm/pytorch-30b_a3b-llm_decode-tensor_parallel-inference:
