--- a/tests/runner/test_config/jax/test_config_inference_data_parallel.yaml
+++ b/tests/runner/test_config/jax/test_config_inference_data_parallel.yaml
@@ -7,13 +7,20 @@ test_config:
     supported_archs: ["n300-llmbox"]
     status: EXPECTED_PASSING
     markers: [nightly]
+
   gpt2/causal_lm/jax-large-data_parallel-inference:
     supported_archs: ["n300-llmbox"]
     status: EXPECTED_PASSING
+
   gpt2/causal_lm/jax-medium-data_parallel-inference:
     supported_archs: ["n300-llmbox"]
     status: EXPECTED_PASSING
+
   gpt2/causal_lm/jax-xl-data_parallel-inference:
     supported_archs: ["n300-llmbox"]
     status: EXPECTED_PASSING
     markers: [large]
+    
+  llama/causal_lm/jax-1B_TINY-data_parallel-inference:
+    supported_archs: ["n300-llmbox"]
+    status: EXPECTED_PASSING
