--- a/.github/workflows/schedule-nightly.yml
+++ b/.github/workflows/schedule-nightly.yml
@@ -204,6 +204,7 @@ jobs:
           python3 -m pytest -svv tests/op_by_op/op_by_op_test.py::test_op_by_op \
             --folder=collected_irs \
             --ir-file-prefix="irs/shlo_compiler" \
+            --compile-only \
             --json-report \
             --json-report-file=op_by_op_report.json \
             || echo "Op-by-op test completed with failures"
