--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,8 @@
 [pytest]
 
+;  https://github.com/tenstorrent/tt-xla/issues/2892, don't use long tracebacks
+adopts = --tb=short
+
 markers =
     push: marks tests as push, to be executed on PR pipeline
     nightly: marks tests as nightly, to be executed on nightly pipeline
