try with different approach

--- a/pjrt_implementation/src/CMakeLists.txt
+++ b/pjrt_implementation/src/CMakeLists.txt
@@ -49,6 +49,8 @@ set_target_properties(TTPJRTTTDylib PROPERTIES
     INSTALL_RPATH "$ORIGIN:$ORIGIN/lib"
 )
 
+set_property(TARGET TTPJRTTTDylib PROPERTY BUILD_WITH_INSTALL_RPATH ON)
+
 install(TARGETS TTPJRTTTDylib DESTINATION ${CMAKE_INSTALL_PREFIX})
 
 if(NOT CMAKE_BUILD_TYPE)
