--- a/tests/runner/test_config/torch/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/torch/test_config_inference_single_device.yaml
@@ -586,7 +586,7 @@ test_config:
     status: EXPECTED_PASSING
     required_pcc: 0.98
     compiler_config:
-      math_fidelity: "undefined"
+      math_fidelity: "ttnn_default"
       fp32_dest_acc_en: false
 
   phi2/causal_lm/pytorch-microsoft/phi-2-pytdml-single_device-inference:
@@ -1534,7 +1534,7 @@ test_config:
     arch_overrides:
       p150:
         compiler_config:
-          math_fidelity: "undefined"
+          math_fidelity: "ttnn_default"
           fp32_dest_acc_en: false
 
   stable_diffusion_xl/pytorch-stable-diffusion-xl-base-1.0-single_device-inference:
@@ -1688,7 +1688,7 @@ test_config:
         bringup_status: FAILED_RUNTIME
       p150:
         compiler_config:
-          math_fidelity: "undefined"
+          math_fidelity: "ttnn_default"
           fp32_dest_acc_en: false
 
   llama/causal_lm/pytorch-llama_3_1_405b-single_device-inference:
@@ -2568,7 +2568,7 @@ test_config:
     arch_overrides:
       p150:
         compiler_config:
-          math_fidelity: "undefined"
+          math_fidelity: "ttnn_default"
           fp32_dest_acc_en: false
 
   wan/pytorch-wan2.2-ti2v-5b-single_device-inference:
