Use uv to install packages

--- a/.github/workflows/call-test.yml
+++ b/.github/workflows/call-test.yml
@@ -154,7 +154,7 @@ jobs:
 
         echo "=== Installing wheel ==="
         source venv/activate
-        pip install wheels/*.whl
+        uv pip install wheels/*.whl
 
     - name: Check for re-run attempt
       id: check-rerun-attempt
