--- a/.github/Dockerfile.base
+++ b/.github/Dockerfile.base
@@ -18,15 +18,18 @@ RUN apt-get update && apt-get install -y \
     xxd \
     ffmpeg
 
+# Install uv tool for managing Python packages
+RUN curl -LsSf https://astral.sh/uv/install.sh
+
 # Install requirements.txt as global Python 3.11 packages
 COPY python_package/requirements.txt /tmp/requirements.txt
 COPY venv/requirements-dev.txt /tmp/requirements-dev.txt
 
 # Now do the actual installation
 RUN ln -sf /usr/bin/FileCheck-17 /usr/bin/FileCheck
-RUN python3.11 -m pip install --upgrade pip --no-cache-dir && \
-    python3.11 -m pip install --index-url https://download.pytorch.org/whl/cpu $(grep 'torch==' /tmp/requirements.txt) && \
-    python3.11 -m pip install --index-url https://download.pytorch.org/whl/cpu $(grep 'torchvision==' /tmp/requirements-dev.txt) && \
-    python3.11 -m pip install -r /tmp/requirements.txt --no-cache-dir && \
-    python3.11 -m pip install -r /tmp/requirements-dev.txt --no-cache-dir && \
+
+RUN uv pip install --python 3.11 --system --no-cache -r /tmp/requirements.txt && \
+    uv pip install --python 3.11 --system --no-cache -r /tmp/requirements-dev.txt && \
     rm /tmp/requirements.txt /tmp/requirements-dev.txt
+
+RUN uv pip list --python 3.11 --system --verbose
